[css-flexbox] content size suggestion of image flex items
Categories
(Core :: Layout: Flexbox, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox132 | --- | fixed |
People
(Reporter: mozilla-apprentice, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(3 files)
A resolution was made for csswg-drafts/#6693.
[css-flexbox] content size suggestion of image flex items
- RESOLVED: no substantive change to spec, but clarify the text to avoid confusion
Comment 1•4 years ago
|
||
The essential behavior-change here is: we need to take the "pre-stretched" cross-size into consideration, when computing its automatic minimum size.
Testcase is https://jsfiddle.net/dgrogan/ug9rsf2a/ , and when this bug is fixed, that testcase should render with a 50px-tall box (instead of 100px which is how we size it now).
markup from that fiddle:
<div style="display: flex; flex-direction: column; width:100px; height: 0px;">
<img src="https://placehold.jp/20/008000/008000/300x150.png" style="height: 100px;" />
</div>
Also, there's a reasonable chance that this will impact grid min-content-sizing behavior as well, since the automatic-minimum-sizing spec text is similar there (and stretching is possible there just as it is in flexbox).
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
https://github.com/web-platform-tests/wpt/pull/30900 updates the tests, and we import them via Bug 1733091.
| Assignee | ||
Comment 4•4 years ago
|
||
We've already set the pre-stretched cross-size via StyleSizeOverrides. All we
have to do is remove the aspect-ratio override to allow the pre-stretched
cross-size in the inline-axis transfer through aspect-ratio to the main-axis as
the block-size.
| Assignee | ||
Comment 5•4 years ago
|
||
This allows the pre-stretched cross-size in the block-axis transfer through
aspect-ratio to main-axis as the inline-size.
Depends on D131260
Updated•4 years ago
|
Comment 6•4 years ago
|
||
As discussed in phabricator for part 2, I filed bug 1742042 preemptively, on what will effectively become a regression from this bug's patch-stack.
We might need either have a fix for that or have a plan for fixing it before we let this ship....
(It's a bit iffy spec-wise since the spec text on intrinsic sizing of flex containers is substantially different from what we [and Chrome I think] actually do under the hood. But we should still aim to preserve the invariant that content doesn't spill out of a container, if the container is sized to its contents....)
| Assignee | ||
Comment 7•4 years ago
|
||
My original goal is to prevent webcompat issue preemptively because dgrogan mentioned in bug 1735891 comment 0 that blink gets bug reports because of changes likes this. However, I completely agree we'll need to fix bug 1742042 before landing my patches because we don't want a new behavior partially compatible with blink and our old behavior.
Comment 8•4 years ago
|
||
There are some r+ patches which didn't land and no activity in this bug for 2 weeks.
:TYLin, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 9•4 years ago
|
||
(In reply to Release mgmt bot [:sylvestre / :calixte / :marco for bugbug] from comment #8)
There are some r+ patches which didn't land and no activity in this bug for 2 weeks.
r+ patches are indeed present, but we don't want to land until we have a solution for bug 1742042, as noted in comment 7.
Comment 10•4 years ago
|
||
This behavior change in chrome just hit stable and we got some bug reports, but not enough that would indicate a real compat issue, so we're planning on keeping the new behavior, and, of course, it would be great to have alignment across the engines here.
Comment 11•3 years ago
|
||
The severity field for this bug is relatively low, S3. However, the bug has 5 See Also bugs.
:TYLin, could you consider increasing the bug severity?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 12•3 years ago
|
||
S3 is OK. We are waiting for the outcome of a spec discussion. See bug 1785914 comment 4.
Comment 13•3 years ago
|
||
Ting-Yu: Is this bug still open with the patches accepted, or are additional changes needed?
| Assignee | ||
Comment 14•3 years ago
|
||
This is still open. Comment 7 & comment 9 are still valid, and we'll need to fix bug 1742042 before landing the patches here.
Comment 15•1 year ago
|
||
Comment 16•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/db620eb72d71
https://hg.mozilla.org/mozilla-central/rev/d100672dcf40
Comment 19•1 year ago
|
||
With this patch the dropmarker in Settings/Search is bigger than normal and forces an ellipsis on the text.
Description
•