Bug 1735589 Part 1 - Respect flex item's aspect-ratio when measuring its main size in block-axis. r=dholbert

We've already set the pre-stretched cross-size via StyleSizeOverrides. All we
have to do is remove the aspect-ratio override to allow the pre-stretched
cross-size in the inline-axis transfer through aspect-ratio to the main-axis as
the block-size.

Differential Revision: https://phabricator.services.mozilla.com/D131260